<?xml version="1.0" encoding="utf-8"?><!--
 Copyright 2015 The Android Open Source Project
 Modifications copyright 2021 Jan Žegklitz

 Licensed under the Apache License, Version 2.0 (the "License");
 you may not use this file except in compliance with the License.
 You may obtain a copy of the License at

     http://www.apache.org/licenses/LICENSE-2.0

 Unless required by applicable law or agreed to in writing, software
 distributed under the License is distributed on an "AS IS" BASIS,
 WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 See the License for the specific language governing permissions and
 limitations under the License.
-->
<resources>
    <string name="app_name">Video Referee</string>
    <string name="new_version_title">New version available</string>
    <string name="new_version_message">
        A newer version of the app, %1$s, is available.
        Now you have version %2$s.
        Go to the download page?
    </string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="no_dont_ask">No and don\'t ask for this version</string>
    <string name="close">Close</string>
    <string name="camera_settings">Settings</string>
    <string name="camera_settings_camera">Camera</string>
    <string name="camera_settings_resolution">Resolution</string>
    <string name="camera_settings_fps">Frame rate (FPS)</string>
    <string name="camera_front">Front</string>
    <string name="camera_back">Back</string>
    <string name="camera_external">External</string>
    <string name="camera_unknown" translatable="false">\?\?\?</string>
    <string name="camera_settings_file_naming">File naming</string>
    <string name="camera_settings_file_naming_help">Help</string>
    <string name="camera_settings_file_naming_help_text_1">Videos file names has the following pattern</string>
    <string name="camera_settings_file_naming_help_text_pattern">VID_%t_B%b_E%e.mp4</string>
    <string name="camera_settings_file_naming_help_text_2">where %t is the current time, %b is the bout number, and %e is the exchange number. Exchange number is automatically incremented after each video is finished.</string>
    <string name="camera_settings_file_naming_bout_counter">Bout number (B)</string>
    <string name="camera_settings_file_naming_exchange_counter">Exchange number (E)</string>
    <string name="camera_settings_continue">Continue</string>
    <string name="capture">Capture</string>
    <string name="play_pause">Play/Pause</string>
    <string name="done">Done</string>
    <string name="delete">Done and delete</string>
    <string name="rewind">Rewind to start</string>
</resources>
